// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main render snapshot 1`] = `
<Main
  classes={
    Object {
      "collapsible": "Main-collapsible-5",
      "graph": "Main-graph-2",
      "main": "Main-main-3",
      "mainContainer": "Main-mainContainer-1",
      "toggle": "Main-toggle-4",
    }
  }
  model={
    Object {
      "disabled": false,
      "domain": Object {
        "label": "x",
        "labelFrequency": 1,
        "max": 10,
        "min": -10,
        "padding": 20,
        "snap": 1,
        "step": 1,
      },
      "graph": Object {
        "lines": Array [
          Object {
            "correctLine": "3x+2",
            "initialView": "3x+3",
            "label": "Line One",
          },
        ],
      },
      "height": 600,
      "range": Object {
        "label": "y",
        "max": 10,
        "min": -10,
        "padding": 20,
        "snap": 1,
        "step": 1,
      },
      "width": 600,
    }
  }
  onSessionChange={[Function]}
  session={Object {}}
/>
`;

exports[`Main render snapshot with rationale 1`] = `
<Main
  classes={
    Object {
      "collapsible": "Main-collapsible-5",
      "graph": "Main-graph-2",
      "main": "Main-main-3",
      "mainContainer": "Main-mainContainer-1",
      "toggle": "Main-toggle-4",
    }
  }
  model={
    Object {
      "disabled": false,
      "domain": Object {
        "label": "x",
        "labelFrequency": 1,
        "max": 10,
        "min": -10,
        "padding": 20,
        "snap": 1,
        "step": 1,
      },
      "graph": Object {
        "lines": Array [
          Object {
            "correctLine": "3x+2",
            "initialView": "3x+3",
            "label": "Line One",
          },
        ],
      },
      "height": 600,
      "range": Object {
        "label": "y",
        "max": 10,
        "min": -10,
        "padding": 20,
        "snap": 1,
        "step": 1,
      },
      "width": 600,
    }
  }
  onSessionChange={[Function]}
  rationale="This is rationale"
  session={Object {}}
/>
`;
